<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/masking_finishLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/masking_buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/masking_undo"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="bottom|center"
                android:text="@string/masking_undo"
                android:textColor="@drawable/masking_left_text_selector"
                android:textSize="10dp" />

            <Button
                android:id="@+id/masking_rotate"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="bottom|center"
                android:text="@string/masking_rotate"
                android:textColor="@drawable/masking_right_text_selector"
                android:textSize="10dp" />

            <Button
                android:id="@+id/masking_masking"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="bottom|center"
                android:text="@string/masking_masking"
                android:textColor="@drawable/masking_right_text_selector"
                android:textSize="10dp" />

            <Button
                android:id="@+id/masking_drag"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="bottom|center"
                android:text="@string/masking_drag"
                android:textColor="@drawable/masking_right_text_selector"
                android:textSize="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/masking_done"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_masking_selector"
            android:gravity="center"
            android:text="@string/masking_done"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/masking_finishLayout">

        <com.joelzhu.maskingboard.views.JZMaskingView
            android:id="@+id/masking_maskingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#464646"
            android:scaleType="matrix" />

        <TextView
            android:id="@+id/masking_maskingHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/masking_hint"
            android:textColor="@color/colorWhite" />
    </FrameLayout>
</RelativeLayout>